--- a/SpriteGameLang/SpriteGameLang.csproj
+++ b/SpriteGameLang/SpriteGameLang.csproj
@@ -5,9 +5,9 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2A2FFB98-2D3F-45E9-A234-4EC5E5331F4D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>SpriteGameLang</RootNamespace>
-    <AssemblyName>spritegamec</AssemblyName>
+    <AssemblyName>SpriteGameLang</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -55,8 +55,17 @@
     <Compile Include="CommandTranslator.cs" />
     <Compile Include="CompileError.cs" />
     <Compile Include="Compiler.cs" />
+    <Compile Include="CompilerWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CompilerWindow.Designer.cs">
+      <DependentUpon>CompilerWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="EntryPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CompilerWindow.resx">
+      <DependentUpon>CompilerWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -80,7 +89,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\folder.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\compile.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(SolutionDir)SpriteGameApi\SpriteGameApi.cpp" "$(TargetDir)SpriteGameApi.cpp"</PostBuildEvent>
