--- a/SpriteGameLang/SpriteGameLang.csproj
+++ b/SpriteGameLang/SpriteGameLang.csproj
@@ -95,6 +95,21 @@
   <ItemGroup>
     <None Include="Resources\compile.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\script_edit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\application_go.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\page_white_edit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\folder_explorer.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\page_white_cplusplus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(SolutionDir)SpriteGameApi\SpriteGameApi.cpp" "$(TargetDir)SpriteGameApi.cpp"</PostBuildEvent>
