--- a/SpriteGameLang/SpriteGameLang.csproj
+++ b/SpriteGameLang/SpriteGameLang.csproj
@@ -110,6 +110,9 @@
   <ItemGroup>
     <None Include="Resources\page_white_cplusplus.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\information.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(SolutionDir)SpriteGameApi\SpriteGameApi.cpp" "$(TargetDir)SpriteGameApi.cpp"</PostBuildEvent>
