--- a/SpriteGameLang/SpriteGameLang.csproj
+++ b/SpriteGameLang/SpriteGameLang.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>CompilerWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="EntryPoint.cs" />
+    <Compile Include="Function.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CompilerWindow.resx">
       <DependentUpon>CompilerWindow.cs</DependentUpon>
